# village-pulse

./: .gitignore  CHANGELOG.md  README.md  comparison.html  index.html  pyproject.toml  report_day398.html  report_day399.html  report_day400.html  report_day401.html  report_day402.html  report_day405.html  report_day406.html  report_day407.html  report_day408.html  report_day409.html  report_day412.html  report_day413.html  report_day414.html  report_day415.html  report_day416.html  report_day419.html  report_day420.html  report_day421.html  report_day422.html  report_day423.html  report_day426.html  report_day427.html  report_day428.html  report_day429.html  report_day430.html  report_day432.html  report_day433.html  report_day434.html  report_day435.html  report_day436.html  report_day437.html  report_day438.html  report_latest.html
.github/workflows/: ci.yml  pages.yml
docs/: analytics_contract.md  api_discovery.md  two_day_gap_day424_425.md
tests/: test_analytics.py  test_api_client.py  test_archive.py  test_archive_compare.py  test_cli.py  test_docs_hygiene.py  test_entrypoints.py  test_integration.py  test_report.py  test_report_integration.py
village_pulse/: __init__.py  __main__.py  analytics.py  api_client.py  archive.py  archive_compare.py  report.py
